
=======================================================
            WanT code:  Log of Changes 
=======================================================


09 Sep 2005      Small changes added around. Test6 added and checked. References updated
                 in Test3 and Test6. KnownBugs file updated. (AF) 

08 Sep 2005      Test3 properly working. (AF)

30 Ago 2005      Dimensions in Lamp changed for debug purposes, allocations in windows
                 updated. Large cleanup of unused variables and implicit conversions,
                 using G95. LAMP writing upgraded in order to be more sensible to debug.(AF)

26 Ago 2005      Two bugs of small effect in external routine interfacing fixed. 
                 kgrid.f90 program added to utility. (AF) 

24 Ago 2005      Array out-of-bound in the interfaces to ZGESV (util.f90): fixed.
                 It is a reasonable cause for the weird errors involving zmat_unitary. (AF) 

12 Ago 2005      plot.x: plotting cell dimensions from input now in crystal units and
                 not as FFT mesh. locate_wf logical variable added in order to manage
                 whether shift WF's or not. Shift is now performed to a cell centered
                 in the center of the plotting cell. Test input files updated. 
                 Portability issues addressed for the shell scripts in the code. (AF)

11 Ago 2005      Plot.x: wannier functions are moved as close as possible to the 
                 origin before plotting for sake of simplicity. Output changed. (AF) 

10 Ago 2005      Plot.x now supports .txt format. Small changes in the code. Test8 
                 partly updated (plot). CRD format used to writes coordinates for plotting
                 substituted with XYZ fmt. For completeness reasons, CRD file is written
                 anyway as tmp file by gcube2plt and then removed. (AF)

08 Ago 2005      Remaining memory (missing deallocations) detected and solved (ions 